CSS fixes for spacing arounf richtext and html blocks

--- a/fec/fec/static/scss/components/_table-styles.scss
+++ b/fec/fec/static/scss/components/_table-styles.scss
@@ -375,6 +375,7 @@ h3 + .simple-table {
   }
   li {
   text-indent: u(-2rem);
+  list-style-type: none;
   }
 }
 
